# bsdos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  core_api.capnp  schema.capnp
bsdos-core/: Cargo.toml  build.rs  streams.conf.example
bsdos-core/src/: capnp.rs  config.rs  hal.rs  lib.rs  main.rs  protocol.rs  stream.capnp  stream_manager.rs  streams_conf.rs  wayland_forwarder.rs  zenoh_config.rs
bsdos-core/tests/integration/: Cargo.toml  stream_pipeline.rs  zenoh_roundtrip.rs
bsdos-core/tests/zenoh-peer/: Cargo.toml
bsdos-core/tests/zenoh-peer/src/: lib.rs
bsdos-pkgd/: Cargo.toml
bsdos-pkgd/src/: build.rs  descriptor.rs  error.rs  inspect.rs  install.rs  main.rs  manifest.rs  verify.rs
bsdos-run/: Cargo.toml
bsdos-run/src/: bplist.rs  entitlements.rs  error.rs  frameworks.rs  ipa.rs  jpk.rs  launch.rs  main.rs  mldr.rs  mobileprovision.rs  plist.rs
docs/: BPI-M64-BOOT.md  CHIMP-READINESS.md
docs/specs/: SPEC_2stream_squirrel.md  SPEC_jpk_descriptor_v1.md  SPEC_squirrel_rootfs.md
infra/: machines.conf
infra/pkgsets/: bpi-headless.txt  phone.txt  qemu.txt
infra/rc.d/: bsdos_agent  bsdos_cage  bsdos_cage_browser  bsdos_core  bsdos_core_server  bsdos_display  bsdos_firefox  bsdos_lifecycled  bsdos_mount  bsdos_pipeline  bsdos_tunnel  bsdos_tunnel_browser  hubd_mcp
infra/rust/: README.md  platform_build.rs
infra/scripts/: bsdos-build.sh  bsdos-smoke.sh  build-core.sh  deploy-bsdos-myvm.sh  mk-cross-cc.sh
jpk-manager/: Cargo.toml
jpk-manager/src/: main.rs  manager.rs  manifest.rs
jpk-recipes/cage/: jpk.toml
jpk-recipes/foot/: jpk.toml
jpk-recipes/phantom-browser/: jpk.toml  launch.sh
jpk-recipes/wpewebkit-fdo/: jpk.toml
lifecycled/: Cargo.toml  build.rs
lifecycled/src/: jail_enum.rs  jpk_config.rs  main.rs  memory_monitor.rs  policy.rs  zenoh_bridge.rs  zstd_pool.rs
lifecycled/tests/: squirrel_artifacts.rs
machotool/: Cargo.toml
machotool/src/: macho.rs  main.rs
wlstream/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VENDORED.md
wlstream/.github/workflows/: ci.yml
wlstream/docs/: DESIGN.md  ROADMAP.md
wlstream/spec/: WAYLAND_STREAM_PROTOCOL.md  wlstream.schema.json
wlstream/src/: compositor.rs  lib.rs  lz4.rs  parser.rs  protocol.rs  sender.rs
