[workspace]
resolver = "2"
members = [
    "bsdos-core",
    "bsdos-core/tests/zenoh-peer",
    "bsdos-core/tests/integration",
    "bsdos-pkgd",
    "lifecycled",
    "jpk-manager",
    "bsdos-run",
    "wlstream",
    "machotool",
]

# Shared dependencies pinned here for workspace consistency
[workspace.dependencies]
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
zenoh       = { version = "1", default-features = false, features = ["transport_tcp", "transport_tls", "transport_ws"] }
futures     = "0.3"
libc        = "0.2"
chrono      = "0.4"
base64      = "0.22"
thiserror   = "1"

# Workspace defaults
[workspace.package]
version = "0.1.0"
edition = "2021"
