[workspace]
resolver = "2"
members = [
    "proto/broker",
    "proto/app",
    "proto/contacts",
    "proto/calendar",
    "proto/clipper",
    "bsdos-core",
    "bsdos-core/tests/zenoh-peer",
    "bsdos-core/tests/integration",
    "bsdos-pkgd",
    "zfs-snapd",
    "matrix-voice",
    "telemetry-client",
    "lifecycled",
    "jpk-manager",
    "push-daemon",
    "ui-backend-rust",
    "mac-companion/metal-viewer",
    "mac-companion/wayland-client",
    "mac-companion/zenoh-link-obfs",
    "mac-companion/zenoh-link-patched",
    "wlstream",
    "bsdos-run",
    "ipa-runtime/machotool",
]

# Shared dependencies pinned here for workspace consistency
[workspace.dependencies]
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
zenoh       = { version = "1", default-features = false, features = ["transport_tcp", "transport_tls", "transport_ws"] }
futures     = "0.3"
libc        = "0.2"
chrono      = "0.4"
base64      = "0.22"
thiserror   = "1"

# Workspace defaults
[workspace.package]
version = "0.1.0"
edition = "2021"

# FreeBSD: add set_bind_to_device stubs
# DPI bypass: ALPN h2/http1.1 on TLS links + AEAD obfs link (zenoh-link-obfs)
[patch.crates-io]
zenoh-util = { path = "./zenoh-util-freebsd" }
zenoh-link-commons = { path = "./mac-companion/zenoh-link-commons-patched" }
zenoh-link-tls = { path = "./mac-companion/zenoh-link-tls-patched" }
# bsdOS: patch the closed zenoh-link dispatcher to add Obfs arm to LinkKind enum,
# new_supported_links, TryFrom<&Locator>, ALL_SUPPORTED_LINKS, LocatorInspector
# is_reliable/is_multicast, and LinkManagerBuilderUnicast::make.
# zenoh-link EXISTS on crates.io (v1.9.0), so [patch.crates-io] is valid here.
zenoh-link = { path = "./mac-companion/zenoh-link-patched" }
# NOTE: zenoh-link-obfs is NOT patchable via [patch.crates-io] (not on crates.io).
# It is wired as a workspace member and path dep inside zenoh-link-patched/Cargo.toml.

