[package]
name = "bsdos-pkgd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bsdos-pkgd"
path = "src/main.rs"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
clap        = { version = "4", features = ["derive"] }
toml        = "0.8"
tar         = "0.4"
flate2      = "1"
sha2        = "0.10"
hex         = "0.4"
walkdir     = "2"
