[package]
name = "bsdos-lifecycled"
version = "0.1.0"
edition = "2021"
description = "bsdOS process & memory lifecycle manager — freeze/hibernate/kill for jails"

[dependencies]
tokio      = { version = "1", features = ["full"] }
libc       = "0.2"
zstd       = "0.13"
toml       = "0.8"
serde      = { workspace = true }
serde_json = { workspace = true }
zenoh      = { workspace = true }

[[bin]]
name = "bsdos-lifecycled"
path = "src/main.rs"
